# Logger

./: CMakeLists.txt  README.md
Source/: Logger.cpp
Tests/: CMakeLists.txt  test.cpp
include/: Logger.h
src/: Logger.cpp
